test/core/errors/literals_error/zs/wrong_hexadecimal_literal_error.zs
package wrong_octal_literal_error;

const uint32 WRONG_HEADECIMAL_LITERAL = 0xWRONG;
